cot-macros/tests/ui/derive_api_operation_response_invalid_variant_multi_tuple.stderr
error: only tuple variants with a single field are supported
 --> tests/ui/derive_api_operation_response_invalid_variant_multi_tuple.rs:3:10
  |
3 | #[derive(ApiOperationResponse)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ApiOperationResponse` (in Nightly builds, run with -Z macro-backtrace for more info)
