cot-macros/tests/ui/derive_api_operation_response_invalid_variant_multi_tuple.rs
use cot::openapi::ApiOperationResponse;

#[derive(ApiOperationResponse)]
enum MyResponse {
    A(u32, String),
}

fn main() {}
